--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>AICTE Edunet 5 Day's FDP</h1>
+<p>Day2!</p>
 
 </body>
 </html>
